--- a/themes/bootstrap/css/custom.css
+++ b/themes/bootstrap/css/custom.css
@@ -234,3 +234,9 @@ button, html input[type=button], input[type=reset], input[type=submit]{
 	display: block;
 	padding: 15px 20px !important;
 }
+
+.footer {
+	position: absolute;
+	bottom: 0; 
+	left: 0
+}
