--- a/themes/bootstrap/css/custom.css
+++ b/themes/bootstrap/css/custom.css
@@ -99,6 +99,20 @@ select {
 	color: #666;
 }
 
+.btn-grid {
+	background-color: #1CB94E;
+	outline: none;
+	color: #fff;
+	font-weight: normal;
+	border-color: #1CB94A;
+}
+.btn-grid:hover,
+.btn-grid:focus {
+	color: #fff;
+	background-color: #1CA347;
+	border-color: #1CA347;
+}
+
 .btn-register {
 	background-color: #1CB94E;
 	outline: none;
