--- a/themes/bootstrap/css/custom.css
+++ b/themes/bootstrap/css/custom.css
@@ -1,23 +1,6 @@
 /* Sticky footer styles
 -------------------------------------------------- */
 
-/* FOOTER */ 
-
-
-
-.content {
-	padding-bottom:100px; /* Height of the footer element */
-}
-.footer {
-	width:100%;
-	height:100px;
-	position:fixed;
-	bottom:0;
-	left:0;
-	/* Set the fixed height of the footer here */
-	background-color: #f5f5f5;
-}
-
 
 /* pagination malware and user */
 
@@ -25,6 +8,11 @@
 	height: 36px;
 	margin: 18px 0;
 	color: #6c58bF;
+}
+
+.footer {
+	border-color: #e7e7e7;
+	background-color: #f8f8f8;
 }
 
 .pagination ul {
